--- a/visual.html
+++ b/visual.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Esto es un titulo de tamaño h1</h1>
     <h2>Esto es un titulo de tamaño h2</h2>
+    <h3>Esto es un titulo de tamaño h3</h3>
 </body>
 </html>
